--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -27,6 +27,15 @@ const {
   <meta property="og:description" content={description}>
   <meta property="og:type" content={ogType}>
   <meta property="og:url" content={ogUrl}>
+  <meta property="og:locale" content="zh_TW">
+  <meta property="og:site_name" content="Paul Kuo">
+  <meta property="og:image" content="https://paulkuo.tw/og-image.png">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content={title}>
+  <meta name="twitter:description" content={description}>
+  <meta name="twitter:image" content="https://paulkuo.tw/og-image.png">
+  <meta name="twitter:site" content="@paulkuo">
+  <link rel="canonical" href={ogUrl}>
   <link rel="icon" type="image/png" href="/favicon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
