--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -60,6 +60,7 @@ const canonical = canonicalUrl || Astro.url.href.replace(/\/$/, '') || ogUrl;
         <a href="/" id="nav-home">首頁</a>
         <a href="/blog" id="nav-blog">思想</a>
         <a href="/projects" id="nav-projects">專案</a>
+        <a href="/#feed" id="nav-feed">消息</a>
         <a href="/about" id="nav-about">關於</a>
         <a href="/#contact" class="nav-cta">聯絡我</a>
       </div>
