--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -44,10 +44,10 @@ const homeSchema = JSON.stringify({
       "knowsAbout": ["Circular Economy", "AI", "Semiconductor", "Theology", "Startup", "Agentic SEO"],
       "sameAs": [
         "https://www.linkedin.com/in/paulkuo",
-        "https://x.com/paulkuo",
+        "https://x.com/zarqarwi",
         "https://www.threads.net/@zarqarwi",
-        "https://www.youtube.com/@KuoPaul",
-        "https://www.facebook.com/zarqarwi",
+        "https://www.youtube.com/@kuopaul8265",
+        "https://www.facebook.com/guo.yao.lang.2025",
         "https://www.instagram.com/zarqarwi",
         "https://bsky.app/profile/paulkuo.bsky.social",
         "https://www.reddit.com/user/Constant-Variety1656"
@@ -237,11 +237,11 @@ const homeSchema = JSON.stringify({
           <h2>Let's Build<br>Something Together</h2>
           <p>無論你是在思考如何讓技術回到人性與秩序的實作場景、想深化循環再生服務與架構布局、或希望探索台日跨境合作的可能，<br>都歡迎來信一起對話、激盪或合作。</p>
           <div class="social-links">
-            <a href="https://x.com/paulkuo" class="social-link" target="_blank">𝕏 Twitter</a>
+            <a href="https://x.com/zarqarwi" class="social-link" target="_blank">𝕏 Twitter</a>
             <a href="https://www.linkedin.com/in/paulkuo" class="social-link" target="_blank">in LinkedIn</a>
             <a href="https://www.threads.net/@zarqarwi" class="social-link" target="_blank">◉ Threads</a>
-            <a href="https://www.youtube.com/@KuoPaul" class="social-link" target="_blank">▶ YouTube</a>
-            <a href="https://www.facebook.com/zarqarwi" class="social-link" target="_blank">📘 Facebook</a>
+            <a href="https://www.youtube.com/@kuopaul8265" class="social-link" target="_blank">▶ YouTube</a>
+            <a href="https://www.facebook.com/guo.yao.lang.2025" class="social-link" target="_blank">📘 Facebook</a>
             <a href="https://www.instagram.com/zarqarwi" class="social-link" target="_blank">📷 Instagram</a>
             <a href="https://bsky.app/profile/paulkuo.bsky.social" class="social-link" target="_blank">🦋 Bluesky</a>
             <a href="https://www.reddit.com/user/Constant-Variety1656" class="social-link" target="_blank">🔴 Reddit</a>
